<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity">

    <ImageView
        android:src="@drawable/logo"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/sign_in_email_edit_text_hint"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/sign_in_password_edit_text_hint"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/sign_in_repeat_password_edit_text_hint"
        android:inputType="textPassword"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/sign_in_name_edit_text_hint"
        android:inputType="textPersonName"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/signInSignUpButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_button_text"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/toggleSignInSignUpTextView"
        android:text="@string/toggle_mode_text_view_sign_in_mode_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="16sp"
        android:clickable="true"
        android:onClick="toggleModeTextViewClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>